log
Thu 24 Aug 2023 01:11:38 AM UTC: 
 tests:  0|6
total_score: 0/70
4f980ed
Thu 24 Aug 2023 01:20:14 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eb49396
Thu 24 Aug 2023 01:33:39 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
679dda0
